<resources>
    <string name="app_name">Calculator</string>
    <string name="calculate_tip">Calculate Tip</string>
    <string name="tip_amount">Tip Amount: %s</string>
    <string name="bill_amount">Bill Amount</string>
    <string name="tip_rate">Tip Rate</string>
    <string name="round_up_tip">Round-up Tip?</string>
</resources>