...
        horizontalArrangement = Arrangement.SpaceBetween
    ) {
        Text(text = stringResource(R.string.round_up_tip))
        Switch(
            checked = isChecked,
            onCheckedChange = onSwitchChange,
            modifier = Modifier.testTag("round-up-switch")
            //modifier = Modifier.fillMaxWidth().wrapContentWidth(Alignment.End)
        )
    }
}
